--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,5 +20,4 @@ html(lang='pt-BR')
   body
     <!--[if lt IE 10]> <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p> <![endif]-->
     block content
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    include views/footer;
+    script(type='text/javascript' data-main='/javascripts/main' src='/bower_components/requirejs/require.js')
