created login test

--- a/views/index.jade
+++ b/views/index.jade
@@ -20,7 +20,7 @@ block content
           form(id='form_login' class='navbar-form pull-right')
             input(type='text' placeholder='Login' name='username' id='username' class='span2')
             input(type='password' placeholder='password' name='password' id='password' class='span2')
-            button(type='submit' id='submitLogin' name='send' class='btn') Access
+            button(type='button' id='submitLogin' name='send' class='btn') Access
   div(class="container")
     div(class="hero-unit")
       h1= title
