--- a/views/index.jade
+++ b/views/index.jade
@@ -16,7 +16,7 @@ block content
             li
               a(href='#about') About
             li
-              a(href='#contact')= 'Contact'
+              a(href='#contact') Contact
           form(id='form_login' class='navbar-form pull-right')
             input(type='text' placeholder='Login' name='username' id='username' class='span2')
             input(type='password' placeholder='password' name='password' id='password' class='span2')
@@ -44,4 +44,4 @@ block content
           a(class="btn" href="#") View details &raquo;
     hr
     footer
-      p (c) Apprenticeship Object Project 2013
+      p &copy; Apprenticeship Object Project 2013
