--- a/views/ead-student/discipline.jade
+++ b/views/ead-student/discipline.jade
@@ -1,1 +1,12 @@
 extends ../layout
+
+block content
+  div(class="container")
+    div(class="row-fluid")
+      div(class="span9")
+        div(class="page-header")
+          h1 Title of discipline
+        div(class="accordion" id="accordion2")
+    hr
+    footer
+      p &copy; Apprenticeship Object Project 2013
