--- a/views/ead-admin/index.jade
+++ b/views/ead-admin/index.jade
@@ -1,38 +1,6 @@
 extends ../layout
 
 block content
-  div(class='navbar navbar-inverse navbar-fixed-top')
-    div(class='navbar-inner')
-      div(class='container')
-        button(type='button' class='btn btn-navbar' data-toggle='collapse' data-target='.nav-collapse')
-          span(class='icon-bar')
-          span(class='icon-bar')
-          span(class='icon-bar')
-        a(class='brand' href='index.html') Project Moodle
-        div(class='nav-collapse collapse')
-          ul(class='nav')
-            li(class='active')
-              a(href='#') Home
-            li
-              a(href='#about') About
-            li
-              a(href='#contact') Contact
-          div(class="pull-right")
-            ul(class="nav pull-right")
-              li(class="dropdown")
-                a(href="#" class="dropdown-toggle" data-toggle="dropdown") Welcome Administrator
-                  b(class="caret")
-                ul(class="dropdown-menu")
-                  li 
-                    a(href="#") Preferences
-                      i(class="icon-cog") 
-                  li 
-                    a(href="#") Contact Support
-                      i(class="icon-envelope") 
-                  li(class="divider")
-                  li 
-                    a(href="../functions/session_logout.html") Logout
-                      i(class="icon-off")
   div(class="container")
     div(class="hero-unit")
       h1 Welcome administrator
@@ -50,15 +18,15 @@ block content
             span(class="caret")
           ul(class="dropdown-menu")
             li
-              a(href="access.html?id=3") Teacher
+              a(href="access/3") Teacher 
                 i(class="icon-pencil")
             li(class="divider")
             li
-              a(href="access.html?id=4") Student
+              a(href="access/4") Student 
                 i(class="icon-user")
             li(class="divider")
             li
-              a(href="access.html?id=2") Administrator
+              a(href="access/2") Administrator 
                 i(class="icon-eye-open")
       div(class="span4")
         h2 Registers
@@ -70,7 +38,7 @@ block content
             span(class="caret")
           ul(class="dropdown-menu")
             li
-              a(href="register_team.html") Classes
+              a(href="register_team/") Classes
                 i(class="icon-asterisk")
       div(class="span4")
         h2 Link
@@ -82,7 +50,7 @@ block content
             span(class="caret")
           ul(class="dropdown-menu")
             li
-              a(href="vinculate_users_team.html") Users for Classes
+              a(href="vinculate_users_team/") Users for Classes
                 i(class="icon-asterisk")
     hr
     footer
