--- a/views/ead-admin/register_team.jade
+++ b/views/ead-admin/register_team.jade
@@ -1,1 +1,40 @@
 extends ../layout
+
+block content
+  div(class="container")
+    div(class="row-fluid")
+      form(class="well span12 form-signin" action="../server/register_new_team.php" method="POST")
+        fieldset
+          legend(style="padding:0 2px 0 0;") Create Team
+          label Name of team:
+          input(class="input-block-level" style="width:300px;" type="text" placeholder="Name of team" id="name_team" name="team" required)
+          label Status:
+          select(class="span3" id="status" name="status" required)
+            option(value="") Selecione...
+          label(class="input-block-level") Link user in team:
+          label(class="radio inline") Yes
+            input(class="show-form-search" type="radio" name="vinculateUser" value="1")
+          label(class="radio inline") No
+            input(class="show-form-search" type="radio" name="vinculateUser" value="0" checked)
+          br
+          div(class="form-search")
+            legend(style="padding:0 2px 0 0;") Link user
+            div(class="vinculateUsers") 
+              form(class="search-users-ajax") 
+                input(type="text" placeholder="name of user" class="input-large search-query users") 
+                button(class="search-users" type="button" class="btn") Search user
+              div(class="form-search-table") 
+                table(class="table table-hover") 
+                  thead 
+                    tr 
+                      th Id
+                      th Name of instructor
+                      th Last name
+                      th E-mail
+                      th Link
+                  tbody(class="form-search-results")
+          br 
+          button(type="submit" id="send" class="btn") Create team
+    hr
+    footer
+      p &copy; Apprenticeship Object Project 2013
