--- a/views/layout.jade
+++ b/views/layout.jade
@@ -19,5 +19,7 @@ html(lang='pt-BR')
     script(type='text/javascript', src='/bower_components/modernizr/modernizr.js')
   body
     <!--[if lt IE 10]> <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p> <![endif]-->
+    include includes/feedback
+    include includes/topMenu
     block content
     script(type='text/javascript' data-main='/javascripts/main' src='/bower_components/requirejs/require.js')
