--- a/views/ead-student/activit.jade
+++ b/views/ead-student/activit.jade
@@ -3,6 +3,7 @@ extends ../layout
 block content
   div(class="container")
     div(class="row-fluid")
+      include ../includes/sidebar
       div(class="span5")
         div(class="modal-header span11" style="margin:10px;")
           h3 Name of activit
