--- a/views/ead-student/discipline.jade
+++ b/views/ead-student/discipline.jade
@@ -3,6 +3,7 @@ extends ../layout
 block content
   div(class="container")
     div(class="row-fluid")
+      include ../includes/sidebar
       div(class="span9")
         div(class="page-header")
           h1 Title of discipline
