--- a/views/ead-teacher/discipline.jade
+++ b/views/ead-teacher/discipline.jade
@@ -2,7 +2,8 @@ extends ../layout
 
 block content
   div(class="container") 
-    div(class="row-fluid") 
+    div(class="row-fluid")
+      include ../includes/sidebar
       div(class="span9") 
         div(class="page-header") 
           h1 Titulo disciplina
