--- a/views/ead-teacher/index.jade
+++ b/views/ead-teacher/index.jade
@@ -1,40 +1,9 @@
 extends ../layout
 
 block content
-  div(class='navbar navbar-inverse navbar-fixed-top')
-    div(class='navbar-inner')
-      div(class='container')
-        button(type='button' class='btn btn-navbar' data-toggle='collapse' data-target='.nav-collapse')
-          span(class='icon-bar')
-          span(class='icon-bar')
-          span(class='icon-bar')
-        a(class='brand' href='index.html') Project Moodle
-        div(class='nav-collapse collapse')
-          ul(class='nav')
-            li(class='active')
-              a(href='#') Home
-            li
-              a(href='#about') About
-            li
-              a(href='#contact') Contact
-          div(class="pull-right")
-            ul(class="nav pull-right")
-              li(class="dropdown" a href="#" class="dropdown-toggle" data-toggle="dropdown") Welcome Teacher
-                b(class="caret")
-                ul(class="dropdown-menu")
-                  li 
-                    a(href="#") Preferences
-                      i(class="icon-cog")
-                  li 
-                    a(href="#") Contact Support
-                      i(class="icon-envelope")
-                  li(class="divider")
-                  li 
-                    a(href="../functions/session_logout.html") Logout
-                      i(class="icon-off")
   div(class="container")
     div(class="row-fluid")
-      //- ?php include '../server/dinamic_sidebar.php'; ?
+      include ../includes/sidebar
       div(class="span9")
         div(class="hero-unit")
           h1 Welcome, teacher!
