--- a/views/includes/sidebar.jade
+++ b/views/includes/sidebar.jade
@@ -3,13 +3,13 @@ div(class="span3")
     ul(class="nav nav-list")
       li(class="nav-header") Area Teacher
       li(class="active")
-        a(href="index.php") professor
+        a(href="index.php")= user.username
       li(class="nav-header") classes
       li
-        a(href="discipline.php?id=1") M1-Turma-EAD-1
+        a(href="discipline/1") M1-Turma-EAD-1
       li
-        a(href="discipline.php?id=6") M2-Turma-PERSENCIAL-2
+        a(href="discipline/6") M2-Turma-PERSENCIAL-2
       li
-        a(href="discipline.php?id=12") teste5
+        a(href="discipline/12") teste5
       li
-        a(href="discipline.php?id=13") teste6
+        a(href="discipline/13") teste6
