--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -35,8 +35,79 @@ a {
 #chat{
 	width: 250px;
 	height: 350px;
-	border: 1px solid;
+	border: 1px solid #aaa;
 	position: absolute;
 	bottom: 10px;
 	right: 40px;
+	border-radius: 8px;
+	overflow: hidden;
+	box-sizing: border-box;
+}
+
+.header-chat{
+	width: 100%;
+	height: 42px;
+	background-color: #ccc;
+	opacity: 0.9;
+	display: block;
+}
+
+.name-user-chat{
+	margin: 0;
+	padding: 0 10px;
+	display: inline-block;
+	line-height: 40px;
+	text-transform: capitalize;
+}
+
+.close-chat, .minimize-chat, .max-chat{
+	border: 0;
+	background: transparent;
+	float: right;
+	margin-right: 10px;
+	line-height: 40px;
+}
+
+.content-chat{
+	width: 100%;
+	height: calc(100% - 80px);
+	overflow-y: auto;
+	box-sizing: border-box;
+	padding: 0 5px;
+	padding-top: 5px;
+	background: #ddd;
+}
+
+.content-list-users-chat, .content-list-chat{
+	margin: 0;
+}
+
+.content-list-users-chat li, .content-list-chat li{
+	list-style: none;
+	margin-bottom: 10px;
+}
+
+.content-image-chat, .image-chat{
+	display: inline-block;
+	width: 40px;
+	height: 40px;
+}
+
+.content-message-chat{
+	padding-left: 45px;
+	display: inline-block;
+}
+
+.footer-chat{
+	width: 100%;
+	height: 40px;
+	background: #ccc;
+	position: absolute;
+	bottom: 0;
+}
+
+.footer-chat .send-message-chat{
+	float: right;
+	margin-right: 10px;
+	margin-top: 10px;
 }
