--- a/views/ead-student/activit.jade
+++ b/views/ead-student/activit.jade
@@ -20,9 +20,9 @@ block content
     hr
     footer
       p &copy; Apprenticeship Object Project 2013
-    div(id="chat")
+    div(id="chat" class="active")
       header(class="header-chat")
-        h4(class="name-user-chat")= user.username
+        h4(class="name-user-chat") Teacher Rafael
         button(class="close-chat" type="button")
           i(class="icon-remove")
         button(class="minimize-chat" type="button")
@@ -34,14 +34,13 @@ block content
           li(class="content-item-chat")
             div(class="content-image-chat")
               img(class="image-chat" src="" alt="image")
-            div(class="content-message-chat")
+            div(class="content-message-chat arrow-left")
               p(class="message-chat") Ola mundo!
         ul(class="content-list-chat")
           li(class="content-item-chat")
             div(class="content-image-chat")
               img(class="image-chat" src="" alt="image")
-            div(class="content-message-chat")
-              p(class="message-chat") Ola mundo!
+            div(class="content-message-chat arrow-left")
+              p(class="message-chat") Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo!
       footer(class="footer-chat")
-        button(class="send-message-chat btn btn-primary btn-mini" type="button")
-          i(class="icon-share-alt")
+        input(type="text" class="send-message-chat")
