--- a/views/ead-student/activit.jade
+++ b/views/ead-student/activit.jade
@@ -34,13 +34,14 @@ block content
           li(class="content-item-chat")
             div(class="content-image-chat")
               img(class="image-chat" src="" alt="image")
-            div(class="content-message-chat arrow-left")
-              p(class="message-chat") Ola mundo!
+            div(class="content-users-chat")
+              p(class="name-user-chat") rafael antonio lucio
         ul(class="content-list-chat")
           li(class="content-item-chat")
             div(class="content-image-chat")
               img(class="image-chat" src="" alt="image")
             div(class="content-message-chat arrow-left")
-              p(class="message-chat") Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo!
+              p(class="message-chat") Ola mundo! Ola mundo! Ola mundo! Ola mundo! Ola mundo!
       footer(class="footer-chat")
         input(type="text" class="send-message-chat")
+        button(type="button" class="btn btn-primary btn-mini btn-send-message-chat") send
