--- a/views/ead-student/activit.jade
+++ b/views/ead-student/activit.jade
@@ -29,14 +29,14 @@ block content
           i(class="icon-minus")
         button(class="max-chat" type="button")
           i(class="icon-plus")
-      section(class="content-chat")
+      section(class="content-chat list-messages")
         ul(class="content-list-users-chat")
           li(class="content-item-chat")
             div(class="content-image-chat")
               img(class="image-chat" src="" alt="image")
             div(class="content-users-chat")
               p(class="name-user-chat") rafael antonio lucio
-        ul(class="content-list-chat")
+        ul(class="content-list-message-chat")
           li(class="content-item-chat")
             div(class="content-image-chat")
               img(class="image-chat" src="" alt="image")
